chore: bump Java SDK version to 1.2.0